--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "dev": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d src"
   }
 }
